Fixed the spacing for the login page

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -9,6 +9,10 @@ h2 {
   border-color: rgb(216, 12, 12);
 }
 
+.login-title {
+  padding: 1em;
+  margin-bottom: 2em;
+}
 
 .username-error,
 .password-error {
